# RigidTransformAcd3D

./: Boundingbox.cpp  Boundingbox.h  CMakeLists.txt  Halfplane.cpp  Halfplane.h  INSTALL.txt  README.md  Utility.cpp  Utility.h  acd3d_main.cpp  definition.h  myViewer.cpp  myViewer.h  transformDecomShape.cpp  transformDecomShape_gui.cpp
Results/: Hand1_res_shape.mtl  Hand1_res_shape.sdp  chair_res_shape.sdp  chair_res_tshape.mtl  drum_res_shape.sdp  drum_res_tshape.mtl  egea_res_shape.mtl  egea_res_shape.sdp  egea_res_tshape.sdp
